centos7_init/etc/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Tue Nov 27 15:14:34 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:JYNET - [0:0]
-A INPUT -j JYNET
-A FORWARD -j JYNET
-A JYNET -i lo -j ACCEPT
-A JYNET -p icmp -m icmp --icmp-type any -j ACCEPT
-A JYNET -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A JYNET -s 192.168.0.0/16 -j ACCEPT
-A JYNET -s 172.16.0.0/12 -j ACCEPT
-A JYNET -s 10.0.0.0/8 -j ACCEPT
-A JYNET -s 183.63.156.170/32 -j ACCEPT
-A JYNET -s 183.63.156.171/32 -j ACCEPT
-A JYNET -s 183.63.156.172/32 -j ACCEPT
-A JYNET -s 183.63.156.173/32 -j ACCEPT
-A JYNET -s 183.63.156.174/32 -j ACCEPT
-A JYNET -s 18.162.117.194/32 -j ACCEPT
-A JYNET -s 124.156.183.22/32 -j ACCEPT
-A JYNET -s 103.206.188.145/32 -j ACCEPT
-A JYNET -s 103.206.188.153/32 -j ACCEPT
-A JYNET -s 61.174.9.175/32 -j ACCEPT
-A JYNET -s 120.92.248.207/32 -j ACCEPT
-A JYNET -s 54.69.237.236/32 -j ACCEPT
-A JYNET -s 122.226.111.222/32 -j ACCEPT
-A JYNET -s 123.58.135.174/32 -j ACCEPT
-A JYNET -m state --state RELATED,ESTABLISHED -j ACCEPT
-A JYNET -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A JYNET -p tcp -m state --state NEW -m tcp --dport 8081 -j ACCEPT
-A JYNET -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A JYNET -p tcp --dport 3306 -j DROP
-A JYNET -p tcp -m state --state NEW -m tcp --dport 2000:3999 -j ACCEPT
-A JYNET -s 52.5.126.170/32 -p tcp -m state --state NEW -m tcp --dport 10050 -j ACCEPT
-A JYNET -s 122.226.111.165/32 -p tcp -m state --state NEW -m tcp --dport 10050 -j ACCEPT
-A JYNET -s 120.92.250.165/32 -p tcp -m state --state NEW -m tcp --dport 10050 -j ACCEPT
-A JYNET -p tcp --dport 23111 -j DROP
-A JYNET -p tcp -m state --state NEW -m tcp --dport 20000:29999 -j ACCEPT
-A JYNET -p tcp -m state --state NEW -m tcp --dport 40000:50000 -j ACCEPT
-A JYNET -j REJECT --reject-with icmp-host-prohibited
COMMIT
